xcb: Initialize the new precision fields

In 63bdae27a83, new fields were added to cairo_xcb_connection_t and
cairo_xcb_surface_t. The same change was done in the xlib backend.

However, in the xlib backend these new fields were properly initialized. This
was forgotten in the xcb backend.

Hopefully-Fixes: https://bugs.freedesktop.org/show_bug.cgi?id=38482

Signed-off-by: Uli Schlachter <psychon@znc.in>